; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/extres/regulator/extr_regulator.c_regulator_get_name.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/extres/regulator/extr_regulator.c_regulator_get_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.regnode* }
%struct.regnode = type { i64, i8* }

@.str = private unnamed_addr constant [46 x i8] c"Attempt to access unreferenced regulator: %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @regulator_get_name(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.regnode*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load %struct.regnode*, %struct.regnode** %5, align 8
  store %struct.regnode* %6, %struct.regnode** %3, align 8
  %7 = load %struct.regnode*, %struct.regnode** %3, align 8
  %8 = getelementptr inbounds %struct.regnode, %struct.regnode* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp sgt i64 %9, 0
  %11 = zext i1 %10 to i32
  %12 = load %struct.regnode*, %struct.regnode** %3, align 8
  %13 = getelementptr inbounds %struct.regnode, %struct.regnode* %12, i32 0, i32 1
  %14 = load i8*, i8** %13, align 8
  %15 = call i32 @KASSERT(i32 %11, i8* %14)
  %16 = load %struct.regnode*, %struct.regnode** %3, align 8
  %17 = getelementptr inbounds %struct.regnode, %struct.regnode* %16, i32 0, i32 1
  %18 = load i8*, i8** %17, align 8
  ret i8* %18
}

declare dso_local i32 @KASSERT(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
